fix: adjust brands slider spacing

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -4235,10 +4235,23 @@ input#confirm-password {
     }
 }
 
-.testimonial__brands img {
-    width: 100%;
-    max-height: 34px;
-    object-fit: cover;
+.testimonial__brands .slick-slide {
+    padding-left: 16px !important;
+    padding-right: 16px !important;
+}
+
+@media screen and (max-width: 575px) {
+    .testimonial__brands .slick-slide {
+        padding-left: 12px !important;
+        padding-right: 12px !important;
+    }
+}
+
+@media screen and (max-width: 424px) {
+    .testimonial__brands .slick-slide {
+        padding-left: 16px !important;
+        padding-right: 16px !important;
+    }
 }
 
 .testimonial-card {
