--- a/src/assets/sass/partials/_home.scss
+++ b/src/assets/sass/partials/_home.scss
@@ -602,10 +602,19 @@
             max-width: 100%;
         }
 
-        img {
-            width: 100%;
-            max-height: 34px;
-            object-fit: cover;
+        .slick-slide {
+            padding-left: 16px !important;
+            padding-right: 16px !important;
+
+            @include msm-screen {
+                padding-left: 12px !important;
+                padding-right: 12px !important;
+            }
+
+            @include xsm-screen {
+                padding-left: 16px !important;
+                padding-right: 16px !important;
+            }
         }
     }
 
